Add tasks for testing